--- a/HW2/app/src/main/res/layout-land/activity_main.xml
+++ b/HW2/app/src/main/res/layout-land/activity_main.xml
@@ -17,7 +17,6 @@
         android:onClick="showToast"
         android:text="@string/button_label_toast"
         android:textColor="@android:color/white"
-        app:backgroundTint="@color/design_default_color_primary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,12 +61,14 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:background="#FFFF00"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/count_initial_value"
         android:textColor="@color/design_default_color_primary"
         android:textSize="160sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_zero"
         app:layout_constraintTop_toTopOf="parent" />
