modify showToast to onSubmit

--- a/HW6/HW6-1/108820028_HW6-1/app/src/main/res/layout/activity_main.xml
+++ b/HW6/HW6-1/108820028_HW6-1/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,6 @@
             android:layout_marginLeft="16dp"
             android:text="Show Toast"
             app:layout_constraintStart_toStartOf="parent"
-            android:onClick = "showToast"/>
+            android:onClick = "onSubmit"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
