finish HW7-1 and prepare for HW7-2

--- a/HW7/HW7-1/108820028_HW7-1/app/src/main/res/layout/content_main.xml
+++ b/HW7/HW7-1/108820028_HW7-1/app/src/main/res/layout/content_main.xml
@@ -1,8 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <androidx.gridlayout.widget.GridLayout
+        android:layout_width="409dp"
+        android:layout_height="601dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="launchDonutActivity"
+            app:layout_column="0"
+            app:layout_row="0"
+            app:srcCompat="@drawable/donut_circle" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="launchFroyoActivity"
+            app:layout_column="1"
+            app:layout_row="0"
+            app:srcCompat="@drawable/froyo_circle" />
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="launchIceCreamActivity"
+            app:layout_column="2"
+            app:layout_row="0"
+            app:srcCompat="@drawable/icecream_circle" />
+    </androidx.gridlayout.widget.GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
