--- a/HW7/HW7-1/108820028_HW7-1/app/src/main/res/layout/activity_main.xml
+++ b/HW7/HW7-1/108820028_HW7-1/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,9 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.108820028_HW71.PopupOverlay" />
 
+        <include
+            android:id="@+id/include"
+            layout="@layout/content_main" />
     </com.google.android.material.appbar.AppBarLayout>
-
-    <include layout="@layout/content_main" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
